<resources>
    <string name="app_name">Dialogs and notifications</string>
    <string name="button_create_notify">Create notification</string>
    <string name="enter_title">Enter a title text:</string>
    <string name="demo_title">My title</string>
    <string name="enter_description">Enter a description:</string>
    <string name="demo_description">My description</string>
    <string name="button_notify">Notify</string>
    <string name="button_notify_cancel">Cancel</string>
    <string name="cancel_toast_text">Operation canceled by user</string>
    <string name="ok_toast_text">Notification created successfully</string>
</resources>
